--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'BV'
 - !lcsh 'Love -- Religious aspects -- Christianity'
+- GITenberg
 tableOfContents: The genius to be loved -- What is Christianity? -- The justice of
   Jesus -- Love is justice -- Love and forgiveness -- The practice of love -- Love
   and judgment -- The wisdom of the simple -- The revelations of grief -- A confession
